# mcpgarden-inspect

./: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
agent/: __init__.py  agent.py  langgraph.json  main.py  math_server.py  pyproject.toml  requirements.txt
agent/sample_agent/: __init__.py  agent.py
client/: .env  components.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  _globals.css  main.tsx
client/src/components/: ChatTab.tsx  Sidebar.tsx
client/src/components/__tests__/: Sidebar.test.tsx
client/src/components/ui/: button.tsx
client/src/lib/hooks/: useConnection.ts
client/src/lib/transports/: StreamableHttpTransport.ts
client/src/utils/: configUtils.ts
server/: package-lock.json
server/src/: index.ts  streamableHttpTransport.ts
