[tool.poetry]
name = "mcp-inspector-agent"
version = "0.1.0"
description = "AI agent for MCP Inspector"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.1.1"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.1"
langchain = "^0.1.9"
langchain-openai = "^0.0.8"
pydantic = "^2.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 